--- a/webpage/buyagrade.html
+++ b/webpage/buyagrade.html
@@ -15,25 +15,36 @@
 		<hr />
 		
 		<h2>Give Us Your Money</h2>
-		<dl>
-			<dt>Name</dt>
-			<dd>
-				???
-			</dd>
-			
-			<dt>Section</dt>
-			<dd>
-				???
-			</dd>
-			
-			<dt>Credit Card</dt>
-			<dd>
-				???
-			</dd>
-		</dl>
+
+		<form action="sucker.php" method="post">
+
+			<dl>
+				<dt>Name</dt>
+				<dd>
+					<input type="text" name="name">
+				</dd>
+				
+				<dt>Section</dt>
+				<dd>
+					<select name="section">
+						<option>Select an option</option>
+						<option>MA</option>
+						<option>MF</option>
+						<option>MC</option>
+					</select>
+				</dd>
+				
+				<dt>Credit Card</dt>
+				<dd>
+					<input type="text" name="crnum"><br>
+					<input type="radio" name="credit" value="Visa">Visa
+					<input type="radio" name="credit" value="Master Card">Master Card
+				</dd>
+			</dl>
 		
-		<div>
-			I am a giant sucker.
-		</div>
+			<div>
+				<input type="submit" value="I am a giant sucker">
+			</div>
+		</form>
 	</body>
 </html>
